Tried to edit files so that mobile-first view displays better and is truly mobile-first, through the codex extension

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div class="header-inner">
             <a class="skip-link" href="#main-content">Skip to main content</a>
             <img src="images/DWH_logo.png" alt="Logo with the initials DWH">
-            <nav aria-label="Primary">
+            <button class="menu-toggle" aria-controls="primary-nav" aria-expanded="false">
+                <span class="menu-icon" aria-hidden="true"></span>
+                <span class="menu-label">Menu</span>
+            </button>
+            <nav id="primary-nav" aria-label="Primary">
                 <a href="index.html" aria-current="page">Home</a>
                 <a href="about-page.html">About</a>
                 <a href="projects-page.html">Projects</a>
