--- a/about-page.html
+++ b/about-page.html
@@ -21,7 +21,11 @@
         <a class="skip-link" href="#main-content">Skip to main content</a>
         <div class="header-inner">
             <img src="images/DWH_logo.png" alt="Logo with the initials DWH">
-            <nav aria-label="Primary">
+            <button class="menu-toggle" aria-controls="primary-nav" aria-expanded="false">
+                <span class="menu-icon" aria-hidden="true"></span>
+                <span class="menu-label">Menu</span>
+            </button>
+            <nav id="primary-nav" aria-label="Primary">
                 <a href="index.html">Home</a>
                 <a href="about-page.html" aria-current="page">About</a>
                 <a href="projects-page.html">Projects</a>
