Had codex work on mobile-view more, to take the extra right side space away, hide nav buttons into hamburger, and smoothly staircase them out when clicked and reverse when clicked away from.

--- a/contact-page.html
+++ b/contact-page.html
@@ -20,7 +20,7 @@
         <div class="header-inner">
             <a class="skip-link" href="#main-content">Skip to main content</a>
             <img src="images/DWH_logo.png" alt="Logo with the initials DWH">
-            <button class="menu-toggle" aria-controls="primary-nav" aria-expanded="false">
+            <button class="menu-toggle" type="button" aria-controls="primary-nav" aria-expanded="false">
                 <span class="menu-icon" aria-hidden="true"></span>
                 <span class="menu-label">Menu</span>
             </button>
