--- a/about-page.html
+++ b/about-page.html
@@ -21,7 +21,7 @@
         <a class="skip-link" href="#main-content">Skip to main content</a>
         <div class="header-inner">
             <img src="images/DWH_logo.png" alt="Logo with the initials DWH">
-            <button class="menu-toggle" aria-controls="primary-nav" aria-expanded="false">
+            <button class="menu-toggle" type="button" aria-controls="primary-nav" aria-expanded="false">
                 <span class="menu-icon" aria-hidden="true"></span>
                 <span class="menu-label">Menu</span>
             </button>
