--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -18,7 +18,7 @@
     <a class="skip-link" href="#main-content">Skip to main content</a>
     <div class="header-inner">
       <img id="site-logo" src="images/DWH_logo.png" alt="Logo with the initials DWH">
-      <button class="menu-toggle" aria-controls="primary-nav" aria-expanded="false">
+      <button class="menu-toggle" type="button" aria-controls="primary-nav" aria-expanded="false">
         <span class="menu-icon" aria-hidden="true"></span>
         <span class="menu-label">Menu</span>
       </button>
